# FlappyBird-NEAT

./: .gitignore  CMakeLists.txt  README.md
head/bird/: Bird.h
head/pipe/: Pipe.h
src/bird/: Bird.cpp
src/game/: Main.cpp
src/pipe/: Pipe.cpp
